--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <script defer src="https://pro.fontawesome.com/releases/v5.10.0/js/all.js" integrity="sha384-G/ZR3ntz68JZrH4pfPJyRbjW+c0+ojii5f+GYiYwldYU69A+Ejat6yIfLSxljXxD" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
@@ -34,7 +34,7 @@
 
 
 <!-- 1st section -->
-<section class="info title1 " style="background-image: url(&quot;images/1605746.jpg&quot;);background-position: center;background-size: cover;background-repeat: no-repeat;">
+<section class="info title1 " style="background-image: url(&quot;1605746.jpg&quot;);background-position: center;background-size: cover;background-repeat: no-repeat;">
   <h1 class="t01 ">Kit Harrington</h1>
   <h2 class="t02 ">as Jon snow.</h2>
   <div class="linkinfo ">
@@ -53,7 +53,7 @@
   <div class="linkinfo ">
     <a href="#">here</a>
   </div>
-  <img src="images\thumb-1920-165874.jpg" alt="">
+  <img src="thumb-1920-165874.jpg" alt="">
 </section>
 
 <div class="video-parent">
